feat: added Retry pattern, added initial chaos experiments